# refscript

./: .gitattributes  .gitignore  .gitmodules  .lvimrc  .travis.yml  LICENSE.LangES  Makefile  Nano.hs  NanoJS.hs  README.md  Rsc.hs  Setup.hs  TODO  TODO.md  nano-js.cabal  refscript.cabal  stack.yaml
Language/Nano/: Annots.hs  CmdLine.hs  ESC.hs  Env.hs  Errors.hs  Files.hs  Misc.hs  Types.hs  VCMonad.hs  Visitor.hs
Language/Nano/ESC/: ESC.hs  Types.hs  VCMonad.hs
Language/Nano/JS/: CmdLine.hs
Language/Nano/Liquid/: CGMonad.hs  Liquid.hs  Parse.hs  SSA.hs  Subst.hs  Substitution.hs  TCMonad.hs  Typecheck.hs  Types.hs
Language/Nano/SSA/: SSA.hs  SSAMonad.hs
Language/Nano/Typecheck/: Compare.hs  Main.hs  Parse.hs  SSA.hs  STMonad.hs  Subst.hs  TCMonad.hs  Typecheck.hs  Types.hs  Unify.hs
Language/Nano/Types/: Parse.hs  Subst.hs
Language/Nano/Visitor/: Visit.hs  Visitor.hs
benchmarks/: TODO.md
benchmarks/dummy/: dummy.ts
benchmarks/underscore/: temp.ts  underscore.d.ts  underscore.ts
doc/: README.md  Specifications.md  ottalt.sty  theory.markdown  typing.txt
doc/formal/: Makefile
doc/src/: includes.tex  ott-local.tex  typing.ott  typing.tex
doc/talk/: RefScript.pptx  topics.md
doc/talk/SoCal-05-2015/: SoCal-05-2015.html  SoCal-05-2015.mdk  ignores.dic
doc/txt/: typing.txt
ext/emacs/: flycheck-rsc.el
ext/tsc-bin/typings/: core.d.ts  lib.d.ts  winjs.d.ts  winrt.d.ts
ext/vim/javascript/: liquid.vim  nanojs.vim
ext/vim/typescript/: liquid.vim  nanojs.vim
include/: .hidden  build-prelude.ts  dom.ts  mini-prelude.ts  nano-prelude.ts  prelude.d.ts  prelude.js  prelude.ts  prelude.ts.orig  small-prelude.ts  tsconfig.json
include/ambient/: array.d.ts  array.ts  boolean.d.ts  boolean.ts  console.d.ts  console.ts  dom.ts  error.d.ts  error.ts  function.d.ts  function.ts  iarguments.d.ts  list.d.ts  math.d.ts  math.ts  number.d.ts  number.ts  object.d.ts  object.ts  regexp.d.ts  string.d.ts  string.ts  undefined.d.ts
include/rsc/: aliases.d.ts  aliases.ts  measures.d.ts  measures.ts  mutability.d.ts  prims.d.ts  prims.ts  qualifiers.d.ts
notes/: meeting-Aug-28-2013.txt  subtyping.txt
racket/: nano-js.rkt
scripts/: README  build-prelude.ts  cleanup.ts  package.json  runtests.ts  tsconfig.json  tsd.json
src/: Nano.hs  Rsc.hs
src/Language/Nano/: AST.hs  Annots.hs  ClassHierarchy.hs  CmdLine.hs  Env.hs  Environment.hs  Errors.hs  Files.hs  Locations.hs  Lookup.hs  Misc.hs  Names.hs  Parser.hs  Pretty.hs  Program.hs  Syntax.hs  SystemUtils.hs  Transformations.hs  Traversals.hs  Types.hs  Visitor.hs
src/Language/Rsc/: AST.hs  Annotations.hs  Annots.hs  ClassHierarchy.hs  CmdLine.hs  Constraints.hs  Environment.hs  Errors.hs  Locations.hs  Lookup.hs  Misc.hs  Module.hs  Names.hs  Options.hs  Parser.hs  Pretty.hs  Program.hs  Symbols.hs  SystemUtils.hs  Transformations.hs  Traversals.hs  TypeUtilities.hs  Types.hs  Visitor.hs
tests/: .gitignore  bench.hs  cleanup  cleanup.js  pldi16.hs  regrtest.py  rtest.py  test.hs
tests/benchmarks/typescript-1.0.1.0/: checker.ts  core.ts
tests/demo/: cast.ts  createElt.ts  ctor.ts  d3-sum.ts  infer.ts  lor.ts  minindex-classic.ts  minindex-modern.ts  negate.ts  opt-args.ts  poly.ts  reals.ts  string-coercion.ts  variadic.ts  while-rec.ts
tests/esc/neg/: abs.js  locks.js  test1.js  while5.js
tests/esc/pos/: adpcm.js  bsearch.js  driver-fun.js  driver-rec.js  inc-fun.js  inc.js  inc0.js  locks-flat.js  locks-fun.js  locks-loop-flat.js  minIndex.js  stmt.js  test2-fun.js
tests/flat/neg/: inc0.js  while5.js
tests/flat/pos/: driver-flat.js  inc0.js  max.js  sum-flat.js  while5-noninductive.js  while5-ok.js  while5-tooweak.js
tests/funs/neg/: bar-unsafe.i  driver-rec-unsafe.i  driver-rec-unsafe2.i  driver-unsafe.i  driver-unsafe2.i  foo-unsafe.i  locks-loop-unsafe.i  locks-unsafe.i  test0-unsafe.i  test1-unsafe.i
tests/funs/pos/: driver-rec.i  driver.i  fib.i  locks-loop.i  locks.i  sum.i  test2.i  test3.i
tests/interpreter/: lambda.js  lambda.ts
tests/jquery/: jquery.min.d.ts  notes.md  test0.ts
tests/liquid-server/: liquid.js  liquidhaskell-config.js
tests/liquid/neg/: abs-bad.js  abs-join.js  abs-sig-bad.js  abs.js  apply-bad.js  cousot-bad.js  forloop-bad.js  forloop-bad1.js  global.js  id-bad.js  id2-bad.js  id2.js  inc-bad.js  inc1.js  int-02.js  list01-bad.js  list02-bad.js  list04-bad.js  list05-bad.js  list09-bad.js  list11-bad.js  list12-bad.js  list13-bad.js  listsum-bad.js  locks-bad.js  minindex02-bug-mini.js  minindex02-bug.js  negate-01-bad.js  negate-02-bad.js  obj01.js  obj03.js  obj05.js  obj07.js  safeList-bad.js  stmt0.js  stmt1.js  str0-unsafe.js  sum-bad.js  sum-badder.js  sum-join-unbound.js  (+6 more)
tests/liquid/pos/: abs-hof.js  abs.js  apply.js  bool-01.js  cousot.js  dep00.js  driver.js  emp1.js  for-01.js  for-03.js  for-04.js  (+53 more)
tests/neg/: 02-glob.ts  03-glob.ts  04-glob.ts  07-bool.ts  08-func-expression.ts  abs.js  locks-loop-fun.js  test0.js  while5-noninductive.js
tests/notjs/: converted.txt
tests/pos/: 01-error.ts  02-glob.ts  09-func-expression.ts  10-func-expression.ts  abs.js  driver-fun.js  driver-rec.js  inc-fun.js  inc.js  locks-fun.js  locks-loop-flat.js  locks-loop-fun.js  stmt.js  sum-fun.js  test0.js  test1.js
tests/todo/: alias.ts  animals.ts  bug-ziptype-unsupported-02.ts  bug-ziptype-unsupported.ts  bv-bug.ts  compound-assignment-operator.ts  crash-long.ts  crash-mini.ts  eq_val1.ts  eq_val2.ts  eq_val3.ts  field-scope.ts  foldl1.ts  for-init.ts  glob-in-ref.ts  hof-intersection.ts  immutable-field.ts  iterable.ts  kmp.ts  loop-ssa.ts  missing-qualif.ts  moveable-point.ts  newquall-00.ts  non-linear.ts  null-undef-literals.ts  offsets.ts  opt-args-02.ts  poly-01.ts  scope-00.ts  short-circuit.ts  ssa-bug-2.ts  ssa-bug-3.ts  ssa-bug.ts  this-scope.ts  transducers.ts  tscErr.ts  tvar-intersection.ts  tvar-scope.ts  ugly-error.ts  underscore-02.ts  (+4 more)
tests/typescript/: TODO  cleanup  cleanup.js  runtests.sh
web/: demo.php  index.html
web/demos/: abs.js  blank.js  paste1.js  paste2.js  paste3.js  safeLists.js  while5.js
web/js/: annot.js  demo.js
(+2720 files in other folders)
