name:                nano-js
version:             0.1.0.0
synopsis:            Small Language for Implementing Verification Algorithms
homepage:            https://github.com/UCSD-PL/nano-js
license:             BSD3
license-file:        LICENSE
author:              Ranjit Jhala
maintainer:          jhala@cs.ucsd.edu
category:            Language
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:  README.md, 
                     include/prelude.js

data-files:          README.md, 
                     include/prelude.js

executable nanojs
  build-depends:       base, containers, 
                       pretty, 
                       vector, bytestring, text, aeson, 
                       hashable < 1.2, 
                       unordered-containers, 
                       filepath, ansi-terminal, process, mtl, syb, cmdargs,
                       liquid-fixpoint, parsec, language-ecmascript-pp

  extensions:          ExistentialQuantification, 
                       FlexibleInstances, 
                       UndecidableInstances,
                       DeriveDataTypeable,
                       TupleSections,
                       NoMonomorphismRestriction,
                       ScopedTypeVariables,
                       BangPatterns

  ghc-options:         -W -O2  
  Main-is:             Nano.hs
  hs-source-dirs:      src

Library
  build-depends:       base, containers, 
                       pretty, 
                       vector, bytestring, text, aeson, 
                       hashable < 1.2, 
                       unordered-containers, 
                       filepath, ansi-terminal, process, mtl, syb, cmdargs,
                       liquid-fixpoint, parsec, language-ecmascript-pp


  extensions:          ExistentialQuantification, 
                       FlexibleInstances, 
                       UndecidableInstances,
                       DeriveDataTypeable,
                       TupleSections,
                       NoMonomorphismRestriction,
                       ScopedTypeVariables,
                       BangPatterns

  ghc-options:         -W -O2  
 
 
  hs-source-dirs:      src
  Exposed-Modules:     Paths_nano_js
--                        Language.Nano.Errors
--                        Language.Nano.Files
--                        Language.Nano.Types
--                        Language.Nano.Env
--                        Language.Nano.Misc
--                        Language.Nano.Annots
--                        Language.Nano.CmdLine
--                        Language.Nano.SSA.SSAMonad
--                        Language.Nano.SSA.SSA
--                        Language.Nano.Typecheck.Unify
--                        Language.Nano.Typecheck.Types
--                        Language.Nano.Typecheck.Parse
--                        Language.Nano.Typecheck.TCMonad
--                        Language.Nano.Typecheck.Compare
--                        Language.Nano.Typecheck.Subst
--                        Language.Nano.Typecheck.Unfold
--                        Language.Nano.Typecheck.Lookup
--                        Language.Nano.Typecheck.Typecheck
--                        Language.Nano.Liquid.Liquid
--                        Language.Nano.Liquid.Types
--                        Language.Nano.Liquid.CGMonad
--                        Language.Nano.Liquid.Qualifiers
