name:                refscript 
version:             0.1.0.0
Copyright:           2010-14 Regents of the University of California
build-type:          Custom
synopsis:            Refinement Types for Scripting Languages
Description:         Refinement Types for Scripting Languages
homepage:            https://github.com/UCSD-PL/refscript
license:             BSD3
license-file:        LICENSE
author:              Panagiotis Vekris, Ranjit Jhala
maintainer:          Ranjit Jhala <jhala@cs.ucsd.edu>
category:            Language
cabal-version:       >=1.18

data-files:          README.md,
                     include/ambient/*.ts,
                     include/rsc/*.ts,
                     include/*.ts

Source-Repository this
  Tag:         0.1
  Type:        git
  Location:    https://github.com/UCSD-PL/refscript

Source-Repository head
  Type:        git
  Location:    https://github.com/UCSD-PL/refscript

Executable rsc
  Default-language:
                    Haskell2010

  build-depends:    base
                  , containers
                  , pretty
                  , split
                  , vector
                  , bytestring
                  , text
                  , aeson
                  , hashable
                  , data-default
                  , directory
                  , unordered-containers
                  , filepath
                  , ansi-terminal
                  , process
                  , mtl >= 2.2.1
                  , syb
                  , cmdargs
                  , liquid-fixpoint
                  , parsec
                  , transformers
                  , fgl
                  , intern
                  , deepseq
                  , text-format
                  , array
                  , attoparsec
                  , ascii-progress >= 0.3
                  , refscript

  -- ghc-options:    -threaded -- -W -O2
  Main-is:        Nano.hs
  hs-source-dirs: src


Library
  Default-language: Haskell2010
  -- ghc-options:    -threaded -- -W -O2
  build-depends:    base
                  , containers
                  , pretty
                  , split
                  , vector
                  , bytestring
                  , text
                  , aeson
                  , hashable
                  , data-default
                  , directory
                  , unordered-containers
                  , filepath
                  , ansi-terminal
                  , process
                  , mtl >= 2.2.1
                  , syb
                  , cmdargs
                  , liquid-fixpoint
                  , parsec
                  , transformers
                  , fgl
                  , intern
                  , deepseq
                  , text-format
                  , array
                  , attoparsec
                  , ascii-progress >= 0.3

  hs-source-dirs:   src
  Exposed-Modules:  Paths_refscript,
                    Language.Nano.Errors,
                    Language.Nano.Files,
                    Language.Nano.Types,
                    Language.Nano.Env,
                    Language.Nano.Misc,
                    Language.Nano.Annots,
                    Language.Nano.CmdLine,
                    Language.Nano.SSA.SSAMonad,
                    Language.Nano.SSA.SSA,
                    Language.Nano.Typecheck.Unify,
                    Language.Nano.Typecheck.Types,
                    Language.Nano.Typecheck.Parse,
                    Language.Nano.Typecheck.TCMonad,
                    Language.Nano.Typecheck.Subst,
                    Language.Nano.Typecheck.Lookup,
                    Language.Nano.Typecheck.Typecheck,
                    Language.Nano.Liquid.Liquid,
                    Language.Nano.Liquid.Types,
                    Language.Nano.Liquid.CGMonad,
                    Language.Nano.Liquid.Qualifiers

test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  ghc-options:      -O2 -threaded
  main-is:          test.hs
  build-depends:    base,
                    directory,
                    filepath,
                    process,
                    tasty >= 0.10,
                    tasty-hunit,
                    tasty-rerun >= 1.1,
                    text


test-suite pldi16
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  ghc-options:      -O2 -threaded
  main-is:          pldi16.hs
  build-depends:    base,
                    directory,
                    filepath,
                    process,
                    tasty >= 0.10,
                    tasty-hunit,
                    tasty-rerun >= 1.1,
                    text
