name:                refscript
version:             0.1.0.0
Copyright:           2010-14 Regents of the University of California
build-type:          Simple
synopsis:            Refinement Types for TypeScript
Description:         Refinement Types for TypeScript
homepage:            https://github.com/UCSD-PL/refscript
license:             BSD3
license-file:        LICENSE
author:              Panagiotis Vekris, Ranjit Jhala
maintainer:          Ranjit Jhala <jhala@cs.ucsd.edu>
category:            Language
cabal-version:       >=1.18

data-files:          README.md,
                     include/prelude.d.ts
                     ext/tsc-bin/built/local/tsc-refscript.js

Source-Repository this
  Tag:         0.1
  Type:        git
  Location:    https://github.com/UCSD-PL/refscript

Source-Repository head
  Type:        git
  Location:    https://github.com/UCSD-PL/refscript

Executable rsc
  Default-language:
                    Haskell2010

  build-depends:    base
                  , data-default
                  , containers
                  , pretty
                  , split
                  , vector
                  , bytestring
                  , text
                  , aeson
                  , hashable
                  , data-default
                  , directory
                  , unordered-containers
                  , filepath
                  , ansi-terminal
                  , process
                  , mtl >= 2.2.1
                  , syb
                  , cmdargs
                  , liquid-fixpoint
                  , parsec
                  , transformers
                  , fgl
                  , intern
                  , deepseq
                  , text-format
                  , array
                  , attoparsec
                  , ascii-progress >= 0.3
                  , refscript

--  ghc-options:    -W -O2
  Main-is:        Rsc.hs
  hs-source-dirs: src
  other-modules:    Language.Rsc.AST
                  , Language.Rsc.AST.Annotations
                  , Language.Rsc.AST.Check
                  , Language.Rsc.AST.Syntax
                  , Language.Rsc.Annotations
                  , Language.Rsc.ClassHierarchy
                  , Language.Rsc.CmdLine
                  , Language.Rsc.Core.EitherIO
                  , Language.Rsc.Core.Env
                  , Language.Rsc.Core.Files
                  , Language.Rsc.Environment
                  , Language.Rsc.Errors
                  , Language.Rsc.Liquid.Alias
                  , Language.Rsc.Liquid.CGMonad
                  , Language.Rsc.Liquid.Checker
                  , Language.Rsc.Liquid.Constraints
                  , Language.Rsc.Constraints
                  , Language.Rsc.Liquid.Environment
                  , Language.Rsc.Liquid.Qualifiers
                  , Language.Rsc.Liquid.Types
                  , Language.Rsc.Liquid.Refinements
                  , Language.Rsc.Locations
                  , Language.Rsc.Lookup
                  , Language.Rsc.Misc
                  , Language.Rsc.Names
                  , Language.Rsc.Parser
                  , Language.Rsc.Parser.Annotations
                  , Language.Rsc.Parser.Common
                  , Language.Rsc.Parser.Declarations
                  , Language.Rsc.Parser.Lexer
                  , Language.Rsc.Parser.Types
                  , Language.Rsc.Pretty
                  , Language.Rsc.Pretty.Annotations
                  , Language.Rsc.Pretty.Common
                  , Language.Rsc.Pretty.Errors
                  , Language.Rsc.Pretty.ClassHierarchy
                  , Language.Rsc.Pretty.Symbols
                  , Language.Rsc.Pretty.Module
                  , Language.Rsc.Pretty.Syntax
                  , Language.Rsc.Pretty.Types
                  , Language.Rsc.Program
                  , Language.Rsc.Symbols
                  , Language.Rsc.Module
                  , Language.Rsc.SSA.SSA
                  , Language.Rsc.SSA.SSAMonad
                  , Language.Rsc.SystemUtils
                  , Language.Rsc.Transformations
                  , Language.Rsc.Traversals
                  , Language.Rsc.TypeUtilities
                  , Language.Rsc.Typecheck.Checker
                  , Language.Rsc.Typecheck.Environment
                  , Language.Rsc.Typecheck.Sub
                  , Language.Rsc.Typecheck.Subst
                  , Language.Rsc.Typecheck.TCMonad
                  , Language.Rsc.Typecheck.Types
                  , Language.Rsc.Typecheck.Unify
                  , Language.Rsc.Types
                  , Language.Rsc.Visitor
                  , Paths_refscript

Library
  Default-language: Haskell2010
  -- ghc-options:    -threaded -- -W -O2
  -- ghc-options:   -threaded -Werror -W -fno-warn-missing-methods
  build-depends:    base
                  , containers
                  , pretty
                  , split
                  , vector
                  , bytestring
                  , text
                  , aeson
                  , hashable
                  , data-default
                  , directory
                  , unordered-containers
                  , filepath
                  , ansi-terminal
                  , process
                  , mtl >= 2.2.1
                  , syb
                  , cmdargs
                  , liquid-fixpoint
                  , parsec
                  , transformers
                  , fgl
                  , intern
                  , deepseq
                  , text-format
                  , array
                  , attoparsec
                  , ascii-progress >= 0.3

  hs-source-dirs:   src
  Exposed-Modules:  Paths_refscript,
                    Language.Rsc.AST,
                    Language.Rsc.AST.Annotations,
                    Language.Rsc.AST.Check,
                    Language.Rsc.AST.Syntax,
                    Language.Rsc.ClassHierarchy,
                    Language.Rsc.Core.EitherIO,
                    Language.Rsc.Constraints,
                    Language.Rsc.Environment,
                    Language.Rsc.Liquid.Alias,
                    Language.Rsc.Liquid.Constraints,
                    Language.Rsc.Liquid.Environment,
                    Language.Rsc.Locations,
                    Language.Rsc.Names,
                    Language.Rsc.Module,
                    Language.Rsc.Symbols,
                    Language.Rsc.Parser.Annotations,
                    Language.Rsc.Parser.Common,
                    Language.Rsc.Parser.Declarations,
                    Language.Rsc.Parser.Lexer,
                    Language.Rsc.Parser.Types,
                    Language.Rsc.Pretty,
                    Language.Rsc.Pretty.Annotations,
                    Language.Rsc.Pretty.Module,
                    Language.Rsc.Pretty.Symbols,
                    Language.Rsc.Pretty.ClassHierarchy,
                    Language.Rsc.Pretty.Common,
                    Language.Rsc.Pretty.Errors,
                    Language.Rsc.Errors,
                    Language.Rsc.Core.Files,
                    Language.Rsc.Types,
                    Language.Rsc.Core.Env,
                    Language.Rsc.Misc,
                    Language.Rsc.Annotations,
                    Language.Rsc.CmdLine,
                    Language.Rsc.SSA.SSAMonad,
                    Language.Rsc.SSA.SSA,
                    Language.Rsc.Parser,
                    Language.Rsc.Lookup,
                    Language.Rsc.Typecheck.Unify,
                    Language.Rsc.Typecheck.Types,
                    Language.Rsc.Typecheck.TCMonad,
                    Language.Rsc.Typecheck.Subst,
                    Language.Rsc.Typecheck.Checker,
                    Language.Rsc.Liquid.Checker,
                    Language.Rsc.Liquid.Types,
                    Language.Rsc.Liquid.Refinements,
                    Language.Rsc.Liquid.CGMonad,
                    Language.Rsc.Liquid.Qualifiers,
                    Language.Rsc.Pretty.Syntax,
                    Language.Rsc.Pretty.Types,
                    Language.Rsc.Program,
                    Language.Rsc.SystemUtils,
                    Language.Rsc.Transformations,
                    Language.Rsc.Traversals,
                    Language.Rsc.TypeUtilities,
                    Language.Rsc.Typecheck.Environment,
                    Language.Rsc.Typecheck.Sub,
                    Language.Rsc.Visitor

test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  ghc-options:      -O2 -threaded
  main-is:          test.hs
  build-depends:    base,
                    directory,
                    filepath,
                    process,
                    tasty >= 0.10,
                    tasty-hunit,
                    tasty-rerun >= 1.1,
                    text
